--- a/EX2-repsonsive-wannabe-starter/index.html
+++ b/EX2-repsonsive-wannabe-starter/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+         <!-- Meta scala 1 in base alla larghezza del device -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Boolean Academy</title>
         <!-- Fonts -->
